// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <select
    className="Dropdown__Select-kLQAl TvOMx"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE kfWEYF"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  <label
    className="Label-bxMjsr iZhmvb"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <select
    className="Dropdown__Select-kLQAl TvOMx"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE kfWEYF"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <select
    className="Dropdown__Select-kLQAl TvOMx"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE kfWEYF"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  <div
    className="ErrorMessage-eJhZpN bzMSZo"
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <select
    className="Dropdown__Select-kLQAl TvOMx"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
    <option
      value="fooKey"
    >
      foo
    </option>
    <option
      value="barKey"
    >
      bar
    </option>
    <option
      value="bazKey"
    >
      baz
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE kfWEYF"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;
